<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVL_GlobalVars" Id="{679680a8-c0b5-4f39-bc4f-3e6e594b9367}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	g_stProcessData : sProcessData;
    g_bPublish : BOOL := FALSE;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>