<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="PRG_MQTT_Client" Id="{6857cbae-53e7-4a87-a380-294b3826b178}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_MQTT_Client
VAR
    fbMqttClient   : FB_IotMqttClient;
    fbMessageQueue : FB_IotMqttMessageQueue;
    fbMessage      : FB_IotMqttMessage;

    bSetParams     : BOOL := TRUE;
    bSubscribed    : BOOL := FALSE;

    sTopicPub      : STRING(255) := 'factory/data';
    sTopicSub      : STRING(255) := 'factory/command';
    sPayloadPub    : STRING(255);
    sPayloadSub    : STRING(255);

    // string for building Payload
    s1, s2, s3, s4, s5, s6, s7, s8 : STRING(255);
	
    (* timer for periodic publish *)
    fbTimer          : TON := (PT := T#1S);

END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Init
IF bSetParams THEN
    bSetParams := FALSE;

    fbMqttClient.sClientId := 'PLC_Beckhoff';
    fbMqttClient.sHostName := '127.0.0.1';   // broker MQTT
    fbMqttClient.nHostPort := 1883;
    fbMqttClient.ipMessageQueue := fbMessageQueue;
END_IF

	// Connection
fbMqttClient.Execute(bConnect := TRUE);

//Subscribe
IF fbMqttClient.bConnected AND NOT bSubscribed THEN
    bSubscribed := fbMqttClient.Subscribe(
        sTopic := sTopicSub,
        eQoS := TcIotMqttQos.AtMostOnceDelivery
    );
END_IF

// getting PayloadSub
IF fbMessageQueue.nQueuedMessages > 0 THEN
    IF fbMessageQueue.Dequeue(fbMessage := fbMessage) THEN
        fbMessage.GetTopic(pTopic := ADR(sTopicSub), nTopicSize := SIZEOF(sTopicSub));
        fbMessage.GetPayload(pPayload := ADR(sPayloadSub), nPayloadSize := SIZEOF(sPayloadSub), bSetNullTermination := TRUE);

        IF sPayloadSub = 'START' THEN
            GVL.g_bStart := TRUE;
            GVL.g_bStop  := FALSE;
            GVL.g_bExit  := FALSE;
        ELSIF sPayloadSub = 'STOP' THEN
            GVL.g_bStop  := TRUE;
            GVL.g_bStart := FALSE;
        ELSIF sPayloadSub = 'RESET' THEN
            GVL.g_iCounter := 0;
        ELSIF sPayloadSub = 'EXIT' THEN
            GVL.g_bExit  := TRUE;
            GVL.g_bStart := FALSE;
        END_IF
    END_IF
END_IF

//  When Start public PayloadPub each 1 sec.
IF GVL.g_bStart THEN
	fbTimer(IN := TRUE);
    IF fbTimer.Q THEN
		fbTimer(IN := FALSE);
		GVL.g_iCounter := GVL.g_iCounter + 1;
		s1 := CONCAT('{"counter":', TO_STRING(GVL.g_iCounter));
		s2 := CONCAT(s1, ',"time_ms":');
		s3 := CONCAT(s2, TIME_TO_STRING(TIME()));
		s4 := CONCAT(s3, ',"Temperature_C":');
		s5 := CONCAT(s4, TO_STRING(GVL.g_stProcessData.rTemperature));
		s6 := CONCAT(s5, ',"Pressure_bar":');
		s7 := CONCAT(s6, TO_STRING(GVL.g_stProcessData.rPressure));
		s8 := CONCAT(s7, ',"Flow_lpm":');
		sPayloadPub := CONCAT(s8, TO_STRING(GVL.g_stProcessData.rFlowRate));
		sPayloadPub := CONCAT(sPayloadPub, '}');
		
		fbMqttClient.Publish(
			sTopic := sTopicPub,
			pPayload := ADR(sPayloadPub),
			nPayloadSize := LEN(sPayloadPub),
			eQoS := TcIotMqttQos.AtMostOnceDelivery,
			bRetain := FALSE,
			bQueue := FALSE
			);
	END_IF	
END_IF]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>