<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="PRG_ProcessSimulation" Id="{43004002-4e1a-49d0-bb21-f7f73f0035e5}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_ProcessSimulation
VAR
	    tCycleTime : TIME := T#100MS;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[GVL_GlobalVars.g_stProcessData.rTemperature := 20.0 + SIN(TIME_TO_LREAL(TIME()) / 5000.0);
GVL_GlobalVars.g_stProcessData.rPressure := 1.0 + 0.2 * SIN(TIME_TO_LREAL(TIME()) / 8000.0);
GVL_GlobalVars.g_stProcessData.rFlowRate := 10.0 + 2.0 * SIN(TIME_TO_LREAL(TIME()) / 6000.0);]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>